force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <description>Links sales profile with the certification rating answers provided by the manager</description>
    <label>Certification</label>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>