force-app/main/default/objects/Certification__c/fields/Individual_Qualitative_Rating__c.field-meta.xml
<CustomField>
    <fullName>Individual_Qualitative_Rating__c</fullName>
    <description>Stores the individual qualitative score for both the managers and reps.</description>
    <label>Individual Qualitative Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>