force-app/main/default/objects/Certification__c/fields/Overall_Quantitative_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Quantitative_Rating__c</fullName>
    <label>Overall Quantitative Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>