force-app/main/default/objects/Certification__c/fields/Prediction_Value__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Value__c</fullName>
    <label>Prediction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>