force-app/main/default/objects/Certification__c/fields/Qualitative_Performer_Category__c.field-meta.xml
<CustomField>
    <fullName>Qualitative_Performer_Category__c</fullName>
    <formula>IF(Overall_Qualitative_Rating__c&gt;=9,&quot;Outstanding&quot;,
IF(Overall_Qualitative_Rating__c&gt;=7,&quot;Strong&quot;,
IF(Overall_Qualitative_Rating__c&gt;=4,&quot;Average&quot;,
IF(Overall_Qualitative_Rating__c&gt;=2,&quot;Marginal&quot;,&quot;Needs Improvement&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualitative Performer Category</label>
    <type>Text</type>
</CustomField>