force-app/main/default/objects/Certification__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the sales rep profile for which the certification is created</description>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipName>Certifcations</relationshipName>
    <type>Lookup</type>
</CustomField>