force-app/main/default/objects/Certification__c/fields/Total_Qualitative_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Qualitative_Weight__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total weights of all the qualitative ratings calculated in the most recent cycle</description>
    <label>Total Qualitative Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>