force-app/main/default/objects/Certification__c/fields/Total_Qualitative_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Qualitative_Weighted_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of weighted score for Qualitative ratings</description>
    <label>Total Qualitative Weighted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>