force-app/main/default/objects/Certification__c/fields/Total_Quantitative_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantitative_Weight__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total weight of the quantitative ratings for the most recent cycle</description>
    <label>Total Quantitative Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>