force-app/main/default/objects/Certification__c/fields/Total_Quantitative_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantitative_Weighted_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of the weighted score for quantitative ratings</description>
    <label>Total Quantitative Weighted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>