force-app/main/default/objects/Certification__c/fields/YTD_Quota_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota_Percentage__c</fullName>
    <description>Stores the YTD Quota Percentage (aggregate for the manager)</description>
    <label>YTD Quota Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>